--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,12 @@
     "type": "project",
     "require": {
         "slim/slim": "^4.11",
-        "laminas/laminas-diactoros": "^2.24"
+        "laminas/laminas-diactoros": "^2.24",
+        "slim/http": "^1.3"
     },
     "autoload": {
         "psr-4": {
-            "Georgerappel\\ChatApi\\": "src/"
+            "App\\": "app"
         }
     },
     "authors": [
